added tests and documentation
