# source/controllers/bookings.ts
@@ -8,10 +8,29 @@ interface Booking {
     numberOfNights: number;
 }
 
+interface BookingModel extends Booking {
+    id: number;
+    firstBookingId?: number | null;
+    previousBookingId?: number | null;
+    nextBookingId?: number | null;
+}
+
 const healthCheck = async (req: Request, res: Response, next: NextFunction) => {
     return res.status(200).json({
         message: "OK"
     })
+}
+
+const getBooking = async (req: Request, res: Response, next: NextFunction) => {
+    const bookingId = Number(req.params.id);
+
+    const existingBooking = await prisma.booking.findUnique({
+        where: {
+            id: bookingId,
+        }
+    });
+
+    return res.status(200).json(existingBooking);
 }
 
 const createBooking = async (req: Request, res: Response, next: NextFunction) => {
@@ -33,6 +52,37 @@ const createBooking = async (req: Request, res: Response, next: NextFunction) =>
 
     return res.status(200).json(bookingResult);
 }
+
+const extendBooking = async (req: Request, res: Response, next: NextFunction) => {
+    // exisiting booking is valid - exists, paid and active e.t.c
+    // unit is available for the dates(checkin & numberOfNights) - unit assignment could also be asynchronous, just check if theres a unit available(communicate if the guest needs to change unit)
+    // create new booking, update chain of bookings
+    try {
+        const newBooking = req.body; // Assuming the booking details are sent in the request body
+        console.log({ newBooking })
+
+        const existingBooking = await findExistingBooking(newBooking.bookingId) as BookingModel;
+
+
+        if (!existingBooking) {
+            return res.status(400).json({ error: 'Booking with ID not found' });
+        }
+
+        const extensionOutcome = await isBookingExtensionPossible(newBooking);
+
+        console.log({ existingBooking, extensionOutcome })
+        if (!extensionOutcome.result) {
+            return res.status(400).json({ error: extensionOutcome.reason });
+        }
+
+        const bookingExtension = await createBookingExtension(newBooking, existingBooking);
+        await updatePreviousBooking(existingBooking.id, bookingExtension.id);
+
+        return res.status(200).json(bookingExtension);
+    } catch (error) {
+        return res.status(500).json({ error: 'Unable to extend booking' });
+    }
+};
 
 type bookingOutcome = {result:boolean, reason:string};
 
@@ -69,30 +119,41 @@ async function isBookingPossible(booking: Booking): Promise<bookingOutcome> {
     // check 3 : Unit is available for the check-in date
     let isUnitAvailableOnCheckInDate = await prisma.booking.findMany({
         where: {
-            AND: [
+            AND: {
+            unitID: booking.unitID,
+            OR: [
                 {
-                    unitID: {
-                        equals: booking.unitID,
-                    },
-                },
-                {
-                    OR: [
+                    AND: [
                         {
                             checkInDate: {
-                                gte: new Date(booking.checkInDate), // Check if new booking starts after existing booking ends
-                                lte: new Date(new Date(booking.checkInDate).getTime() + (booking.numberOfNights * 24 * 60 * 60 * 1000)), // Check if new booking ends before existing booking starts
+                                gte: new Date(new Date(booking.checkInDate).getTime() + (booking.numberOfNights * 24 * 60 * 60 * 1000)), // Check if new booking ends after or on the same day as existing booking starts
                             },
                         },
                         {
                             checkInDate: {
-                                lte: new Date(booking.checkInDate), // Check if new booking starts before existing booking ends
-                                gte: new Date(new Date(booking.checkInDate).getTime() - (booking.numberOfNights * 24 * 60 * 60 * 1000)), // Check if new booking ends after existing booking starts
+                                lte: new Date(booking.checkInDate), // Check if new booking starts on or before existing booking ends
+                            },
+                        },
+                    ],
+                },
+                {
+                    AND: [
+                        {
+                            checkInDate: {
+                                gte: new Date(new Date(booking.checkInDate).getTime() - (booking.numberOfNights * 24 * 60 * 60 * 1000)), // Check if new booking starts after or on the same day as existing booking ends
+                            },
+                        },
+                        {
+                            checkInDate: {
+                                lte: new Date(booking.checkInDate), // Check if new booking ends on or after existing booking starts
                             },
                         },
                     ],
                 },
             ],
         }
+    }
+
     });
     if (isUnitAvailableOnCheckInDate.length > 0) {
         return {result: false, reason: "For the given check-in date, the unit is already occupied"};
@@ -101,4 +162,83 @@ async function isBookingPossible(booking: Booking): Promise<bookingOutcome> {
     return {result: true, reason: "OK"};
 }
 
-export default { healthCheck, createBooking }
+async function isBookingExtensionPossible(booking: BookingModel): Promise<bookingOutcome> {
+    // unit is available for the dates(checkin & numberOfNights) - unit assignment should  be asynchronous, though I'll just check if theres a unit available(communicate if the guest needs to change unit)
+    let isUnitAvailableOnCheckInDate = await prisma.booking.findMany({
+        where: {
+            AND: {
+            unitID: booking.unitID,
+            OR: [
+                {
+                    AND: [
+                        {
+                            checkInDate: {
+                                lte: new Date(new Date(booking.checkInDate).getTime() + (booking.numberOfNights * 24 * 60 * 60 * 1000)),
+                            },
+                        },
+                        {
+                            checkInDate: {
+                                gte: new Date(booking.checkInDate),
+                            },
+                        },
+                    ],
+                },
+                {
+                    AND: [
+                        {
+                            checkInDate: {
+                                lte: new Date(new Date(booking.checkInDate).getTime() - (booking.numberOfNights * 24 * 60 * 60 * 1000)),
+                            },
+                        },
+                        {
+                            checkInDate: {
+                                gte: new Date(booking.checkInDate),
+                            },
+                        },
+                    ],
+                },
+            ],
+        }
+    }
+
+    });
+    console.log({ isUnitAvailableOnCheckInDate })
+    if (isUnitAvailableOnCheckInDate.length > 0) {
+        return {result: false, reason: "For the given check-in date, the unit is already occupied"};
+    }
+    return {result: true, reason: "OK"};
+}
+
+async function findExistingBooking(bookingId: number): Promise<Booking | null> {
+    return await prisma.booking.findUnique({
+        where: {
+            id: bookingId,
+        },
+    });
+}
+
+async function createBookingExtension(booking: Booking, existingBooking: BookingModel): Promise<BookingModel> {
+    return await prisma.booking.create({
+        data: {
+            unitID: booking.unitID,
+            guestName: booking.guestName,
+            checkInDate: new Date(booking.checkInDate),
+            numberOfNights: booking.numberOfNights,
+            firstBookingId: existingBooking?.firstBookingId ?? existingBooking.id,
+            previousBookingId: existingBooking.id,
+        },
+    });
+}
+
+async function updatePreviousBooking(existingBookingId: number, newBookingId: number) {
+    await prisma.booking.update({
+        where: {
+            id: existingBookingId,
+        },
+        data: {
+            nextBookingId: newBookingId,
+        },
+    });
+}
+
+export default { healthCheck, createBooking, extendBooking, getBooking }
